@@ -17,6 +17,7 @@ Version 1.3.13+svn:
     * The apple key works as shortcut modifier again.
     * Made "Show lobby joins of friends only" the default preference.
     * New menu option added to save replays manually.
+    * Opening the action menu in linger mode no longer crashes the game.
 
   * Unit changes and balancing
     * Increased the XP requirement of the Vampire Bat from 14 to 22.
